<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/weather_background"
    tools:context="com.londonappbrewery.climapm.WeatherController">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_location"
        android:id="@+id/locationTV"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="90sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_temp"
        android:id="@+id/tempTV"
        android:layout_below="@+id/changeCityButton"
        app:layout_constraintTop_toBottomOf="@id/changeCityButton"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeCityButton"
        android:src="@drawable/change_city_symbol_small"
        android:contentDescription="@string/change_city_description"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/refreshButton"
        android:background="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:text="@string/icon_refresh"
        app:layout_constraintEnd_toStartOf="@id/changeCityButton"
        app:layout_constraintTop_toTopOf="parent"
        />


    <ImageView
        android:id="@+id/weatherSymbolIV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:contentDescription="@string/weather_description"
        android:src="@drawable/dunno"
        app:layout_constraintBottom_toTopOf="@id/locationTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempTV" />

</android.support.constraint.ConstraintLayout>
