<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/city_background">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:src="@drawable/left"
        android:background="@null"
        android:contentDescription="@string/back_button_description"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:hint="@string/default_query"
        android:background="@color/white"
        android:textSize="30sp"
        android:inputType="textAutoCorrect"
        android:id="@+id/queryET"
        android:textColor="@color/black"
        android:imeOptions="actionGo"
        android:gravity="center_vertical|center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        android:text="@string/get_weather"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/getWeatherTV"
        android:layout_below="@+id/backButton"
        android:layout_centerHorizontal="true"/>

</android.support.constraint.ConstraintLayout>